Add Xml DataMapper

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+service-account.json
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -8,3 +10,8 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
