--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,8 +1,3 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
 
 services:
@@ -21,11 +16,23 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller/'
-        tags: ['controller.service_arguments']
+    App\Application\Command\:
+        resource: '../src/Application/Command'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    GoogleServiceSheets:
+        class: Google_Service_Sheets
+        factory: ['@App\Infrastructure\Component\GoogleApi\GoogleServiceSheetsFactory', createService]
+        arguments:
+            - '@Google_Client'
+
+    GoogleServiceDrive:
+        class: Google_Service_Drive
+        factory: ['@App\Infrastructure\Component\GoogleApi\GoogleServiceDriveFactory', createService]
+        arguments:
+            - '@Google_Client'
+
+    App\Infrastructure\XmlExporter\XmlExporterToGoogleSheet:
+        arguments:
+            - '@Google_Client'
+            - '@GoogleServiceSheets'
+            - '@GoogleServiceDrive'
