--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
     "require": {
         "php": "^7.4.0",
         "ext-ctype": "*",
-        "ext-iconv": "*",
-        "ext-simplexml": "*",
-        "ext-libxml": "*",
-        "ext-json": "*",
         "ext-ftp": "*",
+        "ext-iconv": "*",
+        "ext-json": "*",
+        "ext-libxml": "*",
+        "ext-simplexml": "*",
         "google/apiclient": "^2.8",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/monolog-bundle": "^3.6",
         "symfony/yaml": "5.2.*"
     },
     "config": {
