--- a/.env
+++ b/.env
@@ -24,3 +24,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_AUTH_CONFIG_FILE=service-account.json
 ###< google/apiclient ###
+
+XML_FILES_HOST=
+XML_FILES_USER=
+XML_FILES_PASSWORD=
